--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,18 @@
                             <name>platformVersion</name>
                             <value>${platformVersion}</value>
                         </property>
+                        <property>
+                            <name>deviceName</name>
+                            <value>${deviceName}</value>
+                        </property>
+                        <property>
+                            <name>deviceUDID</name>
+                            <value>${deviceUDID}</value>
+                        </property>
                     </systemProperties>
                 </configuration>
-            </plugin></plugins>
+            </plugin>
+        </plugins>
     </build>
   <packaging>jar</packaging>
 
@@ -55,6 +64,11 @@
           <groupId>io.appium</groupId>
           <artifactId>java-client</artifactId>
           <version>2.1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.uiautomation</groupId>
+          <artifactId>ios-driver</artifactId>
+          <version>0.6.5</version>
       </dependency>
   </dependencies>
 </project>
